--- a/app/views/donate/_charge_form.html.erb
+++ b/app/views/donate/_charge_form.html.erb
@@ -29,7 +29,7 @@
         //alert('submitting form ', $form);
 
         // Disable the submit button to prevent repeated clicks
-        //$form.find('button').prop('disabled', true);
+        $form.find('button').prop('disabled', true);
         Stripe.card.createToken($form, stripeResponseHandler);
         // Prevent the form from submitting with the default action
         return false;
@@ -37,48 +37,99 @@
     });
   </script>
 
-  <form action="process_payment" method="POST" id="payment-form">
+  <form action="process_payment" method="POST" id="payment-form" class="sky-form">
 
-     
+      <input type="hidden" name="charity_id" value=<%= @donation.charityid %>>
 
       <input type="radio"  name="donation_choice" value="1" > Donate Unused Gift Card<br/>
       <input type="radio" name="donation_choice" value="2" checked> Donate money using your credit card<br/><br/>
 
     <span class="payment-errors"></span>
 
-    <div class="form-row">
-      <label>
-        <span>Card Number</span>
-        <input type="text" size="20" data-stripe="number"/>
-      </label>
+    <div class="row">
+      <div class="col-md-8">
+        <label>Name as it appears on your card.</label>
+        <label class="input">
+
+            <i class="icon-append fa fa-user"></i>
+            <input type="text" size="15" name="name"/>
+                                                                    
+        </label>
+      </div>
     </div>
 
-    <div class="form-row">
-      <label>
-        <span>CVC</span>
-        <input type="text" size="4" data-stripe="cvc"/>
+    <br/>
+
+  <div class="row">
+    <div class="col-md-8">
+      <label>Email</label>
+      <label class="input">
+
+          <i class="icon-append fa fa-envelope-o"></i>
+          <input type="text" size="5" name="email"/>
+                                                                  
       </label>
     </div>
+  </div>
 
-    <div class="form-row">
-      <label>
-        <span>Expiration (MM/YYYY)</span>
-        <input type="text" size="2" data-stripe="exp-month"/>
+    <br/>
+
+  <div class="row">
+    <div class="col-md-8">
+      <label>Card Number</label>
+      <label class="input">
+          <i class="icon-append fa fa-credit-card"></i>
+          <input type="text" size="20" data-stripe="number"/>                                                      
       </label>
-      <span> / </span>
-      <input type="text" size="4" data-stripe="exp-year"/>
     </div>
+  </div>
 
-    <div class="form-row">
-      <label>
-        <span>Amount</span>
-        $<input type="text" size="4" name="payment"/>
+    <br/>
+
+   <div class="row">
+    <div class="col-md-4">
+      <label>CVC</label>
+      <label class="input">
+          
+          <input type="text" size="4" data-stripe="cvc"/>                                                      
       </label>
+    </div>
+   </div>
+
+    <br/>
+
+<label>Expiration (MM/YYYY)</label>
+    <div class="row">
+    <div class="col-sm-2">
       
+      <label class="input">
+          
+          <input type="text" size="2" data-stripe="exp-month"/>                                                   
+      </label>
     </div>
+    <div class="col-sm-3">
+      <label class="input">
+          <input type="text" size="4" data-stripe="exp-year"/>                                                   
+      </label>
+    </div>
+   </div>
+
+    <br/>
+    
+    <div class="row">
+      <div class="col-md-4">
+        <label>Donation Amount</label>
+        <label class="input">
+            <i class="icon-append fa fa-usd"></i>
+            <input type="text" size="4" name="payment"/>                                                      
+        </label>
+      </div>
+    </div>
+
+    
 
 <br/>
-    <button type="submit">Submit Payment</button>
+    <button type="submit">Submit Donation</button>
   </form>
 
   <script>
