--- a/app/views/donate/charge.html.erb
+++ b/app/views/donate/charge.html.erb
@@ -10,7 +10,7 @@
 
 		<div class="wp-block default user-form no-margin">
             <div class="form-header">
-                <h2>Donate money using your credit card</h2>
+                <h2>Donate using your credit card</h2>
 
             </div>
 
