--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,8 @@
         <h3 class="ls-l title title-sm strong" style="width:550px; top:15%; left:80px;">Donate Your Partially-Used<br/>Gift Cards</h3>
         <h3 class="ls-l subtitle strong-400" style="width:500px;top:35%; left:80px;">Never let your gift cards go to waste!<br/>Donate your Partially-Used gift cards to your favorite cause and feel good about it.</h3>
         
-        <a href="/cause/index" class="btn btn-base btn-lg ls-l" style="top:55%; left:80px;">Donate</a>
+        <a href="/cause/index" class="btn btn-base btn-lg ls-l" style="top:50%; left:80px;">Donate</a>
+        <h3 class="ls-l subtitle strong-400" style="top:60%; left:80px;">Don't have a gift card to donate?<br/>You can still donate to your favortie cause<br/>by using your credit card.</h3>
 
         <a href="#" class="btn btn-base btn-lg ls-l visible-sm visible-xs" style="top:70%; left:80px;">Check Gift Card Balance</a>
         
