changing donation fields for steven choi

--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -77,6 +77,7 @@
                                                         <span>Donate Unused Gift Card</span>
                                     </button>
                                     <br/>
+                                    <label>You can still donate with a credit card<br/>if you don't have a gift card.</label>
 
 
                                     <% if session[:roleid] == ADMIN_ROLE || (session[:userid] ==  @cause.userid && session[:userid] != nil) %>
