--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -44,7 +44,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Message</label>
-                                <textarea class="form-control" placeholder="Write you message here..." style="height:100px;"></textarea>
+                                <textarea class="form-control" placeholder="Write your message here..." style="height:100px;"></textarea>
                             </div>
                             <button type="submit" class="btn btn-base">Send message</button>
                         </form>
