--- a/app/views/donate/_charge_form.html.erb
+++ b/app/views/donate/_charge_form.html.erb
@@ -1,3 +1,9 @@
+<style>
+
+
+
+</style>
+
 <!-- The required Stripe lib -->
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
