updating for steve choi

--- a/app/views/donate/_donation_form.html.erb
+++ b/app/views/donate/_donation_form.html.erb
@@ -74,6 +74,8 @@ if @donation.errors.any? %>
                                 %>
 
                                     <br/>
+                                    <label style="color:red">State law requires donors to provide <br/>Address, Occupation, and Employer</label>
+                                    <br/><br/>
                                     <label>Address</label>
                                     <label class="input">
 
